Revert "Log optimization"
This reverts commit 8b9c6492b0b2f2f285eca21b0cba4f1a90da185b.
